--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AR15BOT",
+  "name": "HinataCans",
   "version": "1.0.0",
   "description": "Termux only",
   "main": "index.js",
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/A187ID/AR15BOT.git"
+    "url": "git+https://github.com/stylecogan/HinataCans"
   },
   "keywords": [
     "k"
@@ -38,7 +38,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/A187ID/AR15BOT/issues"
+    "url": "https://github.com/stylecogan/HinataCans/issues"
   },
-  "homepage": "https://github.com/A187ID/AR15BOT/readme"
+  "homepage": "https://github.com/stylecogan/HinataCans/readme"
 }
